# Chat

Client/: CMakeLists.txt  chat_message.h  connection.c  connection.h  data.c  data.h  input.c  input.h  main.c
Server/: CMakeLists.txt  chat_message.c  connection.c  connection.h  main.c  server.c  server.h
